	  explanation of how the vpopmail roaming users system works.
	- Revised the configure.in script to try and improve logic,
	  formatting, and helpstrings. Also added tests for many new
	  functions/libraries as per suggestions from autoscan tool.
	  [828680]
	- Contributed README.ipaliasdomains file that provices some
	  explanation of the how the vpopmail IP Alias Domains system
	  works

	Tom Collins
	- Update more files involved in the build process.
	- Remove unused variable (fs) from vset_limits() in vlimits.c.
	  [846509]
	- Change permissions on vpopmail.mysql to 0640. [848605]
	- vuserinfo: indicate whether limit came from domain limits.
	- Correctly apply domain limits to user accounts.
	- Fix problem in maildirquota.c where off_t was assumed to be
	  long.  Created wrapper function to do conversion. [797011]

5.3.30 - 20-Nov-03

	Michael Bowe
	- Fixed logic error in update_rules(), to prevent "update_rules
          failed" error being generated on the first attempt for a 
	  roaming user to POP auth [833926]   
	- Remove "id" column in PostgeSQL's vpopmail table.
	  This column appears to serve no purpose, and causes errors
	  when you try to insert your first domain [822181]
	- Added installation instructions for PostgreSQL to the
	  README.pgsql file [824088] 
	- Made the default ~vpopmail/etc/vpopmail.mysql file more
	  verbose/descriptive
	- Cleared two bugs in the vauth_getall() funcion of vpgsql.c
	  These bugs were in particular causing qmailadmin not to be
	  able to display a list of users for a domain [837139]
	- Modified ifdefs throughout suite to clear compile failures
	  with some of the auth backends if you configured with 
	  --enable-auth-logging=n [842393]

	Tom Collins
	- Install a vlimits.default file if none exists (fixes "can't
	  read domain limits" errors). [828428,828658]
	- Allow for comments in vlimits.default and .qmailadmin-limits.
	- Ignore K/KB/M/MB modifiers on vmoddomlimits -Q. [821892]